argocd/manifests/birdnet-go/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birdnet-go-tailscale
  namespace: birdnet-go
  annotations:
    tailscale.com/proxy-class: "default"
    tailscale.com/proxy-group: "ingress"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Birds"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "mdi-bird"
    gethomepage.dev/description: "Bird song identification (BirdNET-Go)"
    gethomepage.dev/href: "https://birds.ops.eblu.me"
    gethomepage.dev/pod-selector: "app=birdnet-go"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: birdnet-go
      port:
        number: 8080
  tls:
    - hosts:
        - birds
